--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -9,6 +9,7 @@ on:
 
 permissions:
   contents: read
+  pull-requests: write
 
 jobs:
   semgrep:
@@ -22,7 +23,10 @@ jobs:
       - name: Run Semgrep
         run: |
           semgrep scan \
-            --config p/security-audit --config p/secrets --config p/owasp-top-ten --config p/typescript \
+            --config p/security-audit \
+            --config p/secrets \
+            --config p/owasp-top-ten \
+            --config p/typescript \
             --error \
             --metrics=off \
             --exclude node_modules \
@@ -43,5 +47,78 @@ jobs:
           scan-type: 'fs'
           scan-ref: '.'
           format: 'table'
+          output: 'trivy-results.txt'
           severity: 'HIGH,CRITICAL'
           exit-code: '1'
+
+      - name: Post Trivy results to PR
+        if: always() && github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            const results = fs.readFileSync('trivy-results.txt', 'utf8').trim();
+
+            let body;
+            if (results) {
+              // Parse severity counts from Trivy table output
+              // Lines like: Total: 8 (HIGH: 6, CRITICAL: 2)
+              const totalLines = results.match(/Total:\s*\d+\s*\([^)]+\)/g) || [];
+              let high = 0, critical = 0;
+              for (const line of totalLines) {
+                const hm = line.match(/HIGH:\s*(\d+)/);
+                const cm = line.match(/CRITICAL:\s*(\d+)/);
+                if (hm) high += parseInt(hm[1], 10);
+                if (cm) critical += parseInt(cm[1], 10);
+              }
+              const total = high + critical;
+
+              const parts = [];
+              if (critical > 0) parts.push(`**${critical} critical**`);
+              if (high > 0) parts.push(`**${high} high**`);
+              const summary = total > 0
+                ? `Found ${total} vulnerabilities: ${parts.join(', ')}`
+                : 'Found vulnerabilities';
+
+              body = [
+                '## Trivy Vulnerability Scan',
+                '',
+                summary,
+                'This is informational only — it does not block the PR.',
+                '',
+                '<details><summary>View full scan results</summary>',
+                '',
+                '```',
+                results,
+                '```',
+                '',
+                '</details>',
+              ].join('\n');
+            } else {
+              body = '## Trivy Vulnerability Scan\n\nNo HIGH or CRITICAL vulnerabilities found.';
+            }
+
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+            });
+            const existing = comments.find(c =>
+              c.body.includes('## Trivy Vulnerability Scan') &&
+              c.user.type === 'Bot'
+            );
+            if (existing) {
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: existing.id,
+                body,
+              });
+            } else {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body,
+              });
+            }
